update _calc_best_params to run in _get_lightgbm_cv

--- a/examples/explanatory_example.ipynb
+++ b/examples/explanatory_example.ipynb
@@ -921,78 +921,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fframe.encode_categoricals()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "            dept_id  cat_id  item_id  state_id  store_id  day  day_of_week  \\\n",
-       "datetime                                                                     \n",
-       "2014-01-06        0       0        0         0         0    6            0   \n",
-       "2014-01-13        0       0        0         0         0   13            0   \n",
-       "2014-01-20        0       0        0         0         0   20            0   \n",
-       "2014-01-27        0       0        0         0         0   27            0   \n",
-       "2014-02-03        0       0        0         0         0    3            0   \n",
-       "...             ...     ...      ...       ...       ...  ...          ...   \n",
-       "2016-06-26        0       0        2         2         2   26            6   \n",
-       "2016-06-27        0       0        2         2         2   27            0   \n",
-       "2016-06-28        0       0        2         2         2   28            1   \n",
-       "2016-06-29        0       0        2         2         2   29            2   \n",
-       "2016-06-30        0       0        2         2         2   30            3   \n",
-       "\n",
-       "            weekend_flag  week  month  year  quarter month_year quarter_year  \\\n",
-       "datetime                                                                       \n",
-       "2014-01-06         False     2      1    14        1      14M01         14Q1   \n",
-       "2014-01-13         False     3      1    14        1      14M01         14Q1   \n",
-       "2014-01-20         False     4      1    14        1      14M01         14Q1   \n",
-       "2014-01-27         False     5      1    14        1      14M01         14Q1   \n",
-       "2014-02-03         False     6      2    14        1      14M02         14Q1   \n",
-       "...                  ...   ...    ...   ...      ...        ...          ...   \n",
-       "2016-06-26          True    27      6    16        2      16M06         16Q2   \n",
-       "2016-06-27         False    27      6    16        2      16M06         16Q2   \n",
-       "2016-06-28         False    27      6    16        2      16M06         16Q2   \n",
-       "2016-06-29         False    27      6    16        2      16M06         16Q2   \n",
-       "2016-06-30         False    27      6    16        2      16M06         16Q2   \n",
-       "\n",
-       "            predicted_sales  \n",
-       "datetime                     \n",
-       "2014-01-06        -0.060503  \n",
-       "2014-01-13         0.112259  \n",
-       "2014-01-20        -0.011955  \n",
-       "2014-01-27        -0.020324  \n",
-       "2014-02-03         0.456998  \n",
-       "...                     ...  \n",
-       "2016-06-26         0.194706  \n",
-       "2016-06-27         0.211775  \n",
-       "2016-06-28         0.097646  \n",
-       "2016-06-29         0.052971  \n",
-       "2016-06-30         0.073687  \n",
-       "\n",
-       "[1251 rows x 15 columns]"
-      ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>dept_id</th>\n      <th>cat_id</th>\n      <th>item_id</th>\n      <th>state_id</th>\n      <th>store_id</th>\n      <th>day</th>\n      <th>day_of_week</th>\n      <th>weekend_flag</th>\n      <th>week</th>\n      <th>month</th>\n      <th>year</th>\n      <th>quarter</th>\n      <th>month_year</th>\n      <th>quarter_year</th>\n      <th>predicted_sales</th>\n    </tr>\n    <tr>\n      <th>datetime</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2014-01-06</th>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>6</td>\n      <td>0</td>\n      <td>False</td>\n      <td>2</td>\n      <td>1</td>\n      <td>14</td>\n      <td>1</td>\n      <td>14M01</td>\n      <td>14Q1</td>\n      <td>-0.060503</td>\n    </tr>\n    <tr>\n      <th>2014-01-13</th>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>13</td>\n      <td>0</td>\n      <td>False</td>\n      <td>3</td>\n      <td>1</td>\n      <td>14</td>\n      <td>1</td>\n      <td>14M01</td>\n      <td>14Q1</td>\n      <td>0.112259</td>\n    </tr>\n    <tr>\n      <th>2014-01-20</th>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>20</td>\n      <td>0</td>\n      <td>False</td>\n      <td>4</td>\n      <td>1</td>\n      <td>14</td>\n      <td>1</td>\n      <td>14M01</td>\n      <td>14Q1</td>\n      <td>-0.011955</td>\n    </tr>\n    <tr>\n      <th>2014-01-27</th>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>27</td>\n      <td>0</td>\n      <td>False</td>\n      <td>5</td>\n      <td>1</td>\n      <td>14</td>\n      <td>1</td>\n      <td>14M01</td>\n      <td>14Q1</td>\n      <td>-0.020324</td>\n    </tr>\n    <tr>\n      <th>2014-02-03</th>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>3</td>\n      <td>0</td>\n      <td>False</td>\n      <td>6</td>\n      <td>2</td>\n      <td>14</td>\n      <td>1</td>\n      <td>14M02</td>\n      <td>14Q1</td>\n      <td>0.456998</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>2016-06-26</th>\n      <td>0</td>\n      <td>0</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>26</td>\n      <td>6</td>\n      <td>True</td>\n      <td>27</td>\n      <td>6</td>\n      <td>16</td>\n      <td>2</td>\n      <td>16M06</td>\n      <td>16Q2</td>\n      <td>0.194706</td>\n    </tr>\n    <tr>\n      <th>2016-06-27</th>\n      <td>0</td>\n      <td>0</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>27</td>\n      <td>0</td>\n      <td>False</td>\n      <td>27</td>\n      <td>6</td>\n      <td>16</td>\n      <td>2</td>\n      <td>16M06</td>\n      <td>16Q2</td>\n      <td>0.211775</td>\n    </tr>\n    <tr>\n      <th>2016-06-28</th>\n      <td>0</td>\n      <td>0</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>28</td>\n      <td>1</td>\n      <td>False</td>\n      <td>27</td>\n      <td>6</td>\n      <td>16</td>\n      <td>2</td>\n      <td>16M06</td>\n      <td>16Q2</td>\n      <td>0.097646</td>\n    </tr>\n    <tr>\n      <th>2016-06-29</th>\n      <td>0</td>\n      <td>0</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>29</td>\n      <td>2</td>\n      <td>False</td>\n      <td>27</td>\n      <td>6</td>\n      <td>16</td>\n      <td>2</td>\n      <td>16M06</td>\n      <td>16Q2</td>\n      <td>0.052971</td>\n    </tr>\n    <tr>\n      <th>2016-06-30</th>\n      <td>0</td>\n      <td>0</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>30</td>\n      <td>3</td>\n      <td>False</td>\n      <td>27</td>\n      <td>6</td>\n      <td>16</td>\n      <td>2</td>\n      <td>16M06</td>\n      <td>16Q2</td>\n      <td>0.073687</td>\n    </tr>\n  </tbody>\n</table>\n<p>1251 rows × 15 columns</p>\n</div>"
-     },
-     "metadata": {},
-     "execution_count": 45
-    }
-   ],
-   "source": [
-    "fframe.predictions"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 47,
    "metadata": {},
    "outputs": [
@@ -1032,76 +960,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "LGBMRegressor(hist_pool_size=1000, importance_type='gain',\n",
-       "              objective='regression', seed=7, verbosity=-1)"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 36
-    }
-   ],
-   "source": [
-    "fframe.model_object"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "            predicted_sales  sales  dept_id cat_id      item_id state_id  \\\n",
-       "datetime                                                                   \n",
-       "2014-01-06        -0.060503    0.0  FOODS_1  FOODS  FOODS_1_001       CA   \n",
-       "2014-01-13         0.112259    0.0  FOODS_1  FOODS  FOODS_1_001       CA   \n",
-       "2014-01-20        -0.011955    0.0  FOODS_1  FOODS  FOODS_1_001       CA   \n",
-       "2014-01-27        -0.020324    0.0  FOODS_1  FOODS  FOODS_1_001       CA   \n",
-       "2014-02-03         0.456998    0.0  FOODS_1  FOODS  FOODS_1_001       CA   \n",
-       "...                     ...    ...      ...    ...          ...      ...   \n",
-       "2016-06-26         0.194706    NaN  FOODS_1  FOODS  FOODS_1_003       WI   \n",
-       "2016-06-27         0.211775    NaN  FOODS_1  FOODS  FOODS_1_003       WI   \n",
-       "2016-06-28         0.097646    NaN  FOODS_1  FOODS  FOODS_1_003       WI   \n",
-       "2016-06-29         0.052971    NaN  FOODS_1  FOODS  FOODS_1_003       WI   \n",
-       "2016-06-30         0.073687    NaN  FOODS_1  FOODS  FOODS_1_003       WI   \n",
-       "\n",
-       "           store_id  \n",
-       "datetime             \n",
-       "2014-01-06     CA_1  \n",
-       "2014-01-13     CA_1  \n",
-       "2014-01-20     CA_1  \n",
-       "2014-01-27     CA_1  \n",
-       "2014-02-03     CA_1  \n",
-       "...             ...  \n",
-       "2016-06-26     WI_1  \n",
-       "2016-06-27     WI_1  \n",
-       "2016-06-28     WI_1  \n",
-       "2016-06-29     WI_1  \n",
-       "2016-06-30     WI_1  \n",
-       "\n",
-       "[1251 rows x 7 columns]"
-      ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>predicted_sales</th>\n      <th>sales</th>\n      <th>dept_id</th>\n      <th>cat_id</th>\n      <th>item_id</th>\n      <th>state_id</th>\n      <th>store_id</th>\n    </tr>\n    <tr>\n      <th>datetime</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2014-01-06</th>\n      <td>-0.060503</td>\n      <td>0.0</td>\n      <td>FOODS_1</td>\n      <td>FOODS</td>\n      <td>FOODS_1_001</td>\n      <td>CA</td>\n      <td>CA_1</td>\n    </tr>\n    <tr>\n      <th>2014-01-13</th>\n      <td>0.112259</td>\n      <td>0.0</td>\n      <td>FOODS_1</td>\n      <td>FOODS</td>\n      <td>FOODS_1_001</td>\n      <td>CA</td>\n      <td>CA_1</td>\n    </tr>\n    <tr>\n      <th>2014-01-20</th>\n      <td>-0.011955</td>\n      <td>0.0</td>\n      <td>FOODS_1</td>\n      <td>FOODS</td>\n      <td>FOODS_1_001</td>\n      <td>CA</td>\n      <td>CA_1</td>\n    </tr>\n    <tr>\n      <th>2014-01-27</th>\n      <td>-0.020324</td>\n      <td>0.0</td>\n      <td>FOODS_1</td>\n      <td>FOODS</td>\n      <td>FOODS_1_001</td>\n      <td>CA</td>\n      <td>CA_1</td>\n    </tr>\n    <tr>\n      <th>2014-02-03</th>\n      <td>0.456998</td>\n      <td>0.0</td>\n      <td>FOODS_1</td>\n      <td>FOODS</td>\n      <td>FOODS_1_001</td>\n      <td>CA</td>\n      <td>CA_1</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>2016-06-26</th>\n      <td>0.194706</td>\n      <td>NaN</td>\n      <td>FOODS_1</td>\n      <td>FOODS</td>\n      <td>FOODS_1_003</td>\n      <td>WI</td>\n      <td>WI_1</td>\n    </tr>\n    <tr>\n      <th>2016-06-27</th>\n      <td>0.211775</td>\n      <td>NaN</td>\n      <td>FOODS_1</td>\n      <td>FOODS</td>\n      <td>FOODS_1_003</td>\n      <td>WI</td>\n      <td>WI_1</td>\n    </tr>\n    <tr>\n      <th>2016-06-28</th>\n      <td>0.097646</td>\n      <td>NaN</td>\n      <td>FOODS_1</td>\n      <td>FOODS</td>\n      <td>FOODS_1_003</td>\n      <td>WI</td>\n      <td>WI_1</td>\n    </tr>\n    <tr>\n      <th>2016-06-29</th>\n      <td>0.052971</td>\n      <td>NaN</td>\n      <td>FOODS_1</td>\n      <td>FOODS</td>\n      <td>FOODS_1_003</td>\n      <td>WI</td>\n      <td>WI_1</td>\n    </tr>\n    <tr>\n      <th>2016-06-30</th>\n      <td>0.073687</td>\n      <td>NaN</td>\n      <td>FOODS_1</td>\n      <td>FOODS</td>\n      <td>FOODS_1_003</td>\n      <td>WI</td>\n      <td>WI_1</td>\n    </tr>\n  </tbody>\n</table>\n<p>1251 rows × 7 columns</p>\n</div>"
-     },
-     "metadata": {},
-     "execution_count": 50
-    }
-   ],
-   "source": [
-    "fframe.predict(model=\"lightgbm\", future_periods=10)"
-   ]
-  },
-  {
    "source": [
     "#### Parameter tuning with RandomizedSearchCV\n",
     "\n",
@@ -1112,10 +970,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ff"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fframe.cross_validate(model=\"lightgbm\", folds=3)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#TODO these different flavors of LightGBM haven't been tested\n",
+    "#TODO add tests for .predict and .cross_validate\n",
     "from sklearn.model_selection import RandomizedSearchCV\n",
     "\n",
     "params = ff.get_lgb_params(\"light\") # generate a pre-made set of LightGBM params\n",
