--- a/examples/prophet_example.ipynb
+++ b/examples/prophet_example.ipynb
@@ -10,13 +10,17 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5-final"
+   "version": "3.8.5"
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3",
-   "language": "python"
+   "name": "python385jvsc74a57bd0916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1",
+   "display_name": "Python 3.8.5 64-bit"
+  },
+  "metadata": {
+   "interpreter": {
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+   }
   }
  },
  "nbformat": 4,
@@ -31,17 +35,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "\n",
@@ -50,9 +46,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "Importing plotly failed. Interactive plots will not work.\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "import numpy as np\n",
@@ -76,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,32 +89,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "            ds       y\n",
-       "0   1992-01-01  146376\n",
-       "1   1992-02-01  147079\n",
-       "2   1992-03-01  159336\n",
-       "3   1992-04-01  163669\n",
-       "4   1992-05-01  170068\n",
-       "..         ...     ...\n",
-       "288 2016-01-01  400928\n",
-       "289 2016-02-01  413554\n",
-       "290 2016-03-01  460093\n",
-       "291 2016-04-01  450935\n",
-       "292 2016-05-01  471421\n",
+       "             ds       y\n",
+       "0    1992-01-01  146376\n",
+       "1    1992-02-01  147079\n",
+       "2    1992-03-01  159336\n",
+       "3    1992-04-01  163669\n",
+       "4    1992-05-01  170068\n",
+       "..          ...     ...\n",
+       "288  2016-01-01  400928\n",
+       "289  2016-02-01  413554\n",
+       "290  2016-03-01  460093\n",
+       "291  2016-04-01  450935\n",
+       "292  2016-05-01  471421\n",
        "\n",
        "[293 rows x 2 columns]"
       ],
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>ds</th>\n      <th>y</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1992-01-01</td>\n      <td>146376</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1992-02-01</td>\n      <td>147079</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>1992-03-01</td>\n      <td>159336</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>1992-04-01</td>\n      <td>163669</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>1992-05-01</td>\n      <td>170068</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>288</th>\n      <td>2016-01-01</td>\n      <td>400928</td>\n    </tr>\n    <tr>\n      <th>289</th>\n      <td>2016-02-01</td>\n      <td>413554</td>\n    </tr>\n    <tr>\n      <th>290</th>\n      <td>2016-03-01</td>\n      <td>460093</td>\n    </tr>\n    <tr>\n      <th>291</th>\n      <td>2016-04-01</td>\n      <td>450935</td>\n    </tr>\n    <tr>\n      <th>292</th>\n      <td>2016-05-01</td>\n      <td>471421</td>\n    </tr>\n  </tbody>\n</table>\n<p>293 rows × 2 columns</p>\n</div>"
      },
      "metadata": {},
-     "execution_count": 9
+     "execution_count": 4
     }
    ],
    "source": [
@@ -119,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,9 +132,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "                    trend    predicted_y         y  predicted_y_upper  \\\n",
+       "ds                                                                      \n",
+       "1992-01-01  149250.780024  131335.258888  146376.0      140825.225735   \n",
+       "1992-02-01  150289.708735  131131.825070  147079.0      140970.149553   \n",
+       "1992-03-01  151261.609788  164783.266318  159336.0      174700.290719   \n",
+       "1992-04-01  152300.538499  164876.320165  163669.0      174375.327547   \n",
+       "1992-05-01  153305.953381  179316.575111  170068.0      188469.328296   \n",
+       "...                   ...            ...       ...                ...   \n",
+       "2016-05-07  448979.625130  474009.909550       NaN      483638.089231   \n",
+       "2016-05-08  449025.071656  472531.169543       NaN      481723.703450   \n",
+       "2016-05-09  449070.518182  477923.719431       NaN      487888.922145   \n",
+       "2016-05-10  449115.964707  481324.802194       NaN      490876.367787   \n",
+       "2016-05-11  449161.411233  482315.157151       NaN      491150.600357   \n",
+       "\n",
+       "            predicted_y_lower  \n",
+       "ds                             \n",
+       "1992-01-01      122165.630948  \n",
+       "1992-02-01      121513.591401  \n",
+       "1992-03-01      155865.233674  \n",
+       "1992-04-01      155612.044672  \n",
+       "1992-05-01      170054.322775  \n",
+       "...                       ...  \n",
+       "2016-05-07      465013.352270  \n",
+       "2016-05-08      462980.818971  \n",
+       "2016-05-09      468821.918327  \n",
+       "2016-05-10      472199.202105  \n",
+       "2016-05-11      472703.825226  \n",
+       "\n",
+       "[303 rows x 5 columns]"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>trend</th>\n      <th>predicted_y</th>\n      <th>y</th>\n      <th>predicted_y_upper</th>\n      <th>predicted_y_lower</th>\n    </tr>\n    <tr>\n      <th>ds</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>1992-01-01</th>\n      <td>149250.780024</td>\n      <td>131335.258888</td>\n      <td>146376.0</td>\n      <td>140825.225735</td>\n      <td>122165.630948</td>\n    </tr>\n    <tr>\n      <th>1992-02-01</th>\n      <td>150289.708735</td>\n      <td>131131.825070</td>\n      <td>147079.0</td>\n      <td>140970.149553</td>\n      <td>121513.591401</td>\n    </tr>\n    <tr>\n      <th>1992-03-01</th>\n      <td>151261.609788</td>\n      <td>164783.266318</td>\n      <td>159336.0</td>\n      <td>174700.290719</td>\n      <td>155865.233674</td>\n    </tr>\n    <tr>\n      <th>1992-04-01</th>\n      <td>152300.538499</td>\n      <td>164876.320165</td>\n      <td>163669.0</td>\n      <td>174375.327547</td>\n      <td>155612.044672</td>\n    </tr>\n    <tr>\n      <th>1992-05-01</th>\n      <td>153305.953381</td>\n      <td>179316.575111</td>\n      <td>170068.0</td>\n      <td>188469.328296</td>\n      <td>170054.322775</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>2016-05-07</th>\n      <td>448979.625130</td>\n      <td>474009.909550</td>\n      <td>NaN</td>\n      <td>483638.089231</td>\n      <td>465013.352270</td>\n    </tr>\n    <tr>\n      <th>2016-05-08</th>\n      <td>449025.071656</td>\n      <td>472531.169543</td>\n      <td>NaN</td>\n      <td>481723.703450</td>\n      <td>462980.818971</td>\n    </tr>\n    <tr>\n      <th>2016-05-09</th>\n      <td>449070.518182</td>\n      <td>477923.719431</td>\n      <td>NaN</td>\n      <td>487888.922145</td>\n      <td>468821.918327</td>\n    </tr>\n    <tr>\n      <th>2016-05-10</th>\n      <td>449115.964707</td>\n      <td>481324.802194</td>\n      <td>NaN</td>\n      <td>490876.367787</td>\n      <td>472199.202105</td>\n    </tr>\n    <tr>\n      <th>2016-05-11</th>\n      <td>449161.411233</td>\n      <td>482315.157151</td>\n      <td>NaN</td>\n      <td>491150.600357</td>\n      <td>472703.825226</td>\n    </tr>\n  </tbody>\n</table>\n<p>303 rows × 5 columns</p>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 6
+    }
+   ],
    "source": [
     "fframe.predict(model=\"prophet\", future_periods=10, weekly_seasonality=True, daily_seasonality=True)\n",
     "fframe.get_predictions()\n"
