--- a/examples/simple_example.ipynb
+++ b/examples/simple_example.ipynb
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "source": [
     "fframe.predict(model=\"prophet\", future_periods=10, weekly_seasonality=True, daily_seasonality=True)\n",
     "fframe.get_predictions()"
@@ -272,9 +272,9 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>trend</th>\n",
-       "      <th>predicted_y</th>\n",
        "      <th>y</th>\n",
+       "      <th>predicted_y</th>\n",
+       "      <th>trend</th>\n",
        "      <th>predicted_y_upper</th>\n",
        "      <th>predicted_y_lower</th>\n",
        "    </tr>\n",
@@ -290,43 +290,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1992-01-01</th>\n",
-       "      <td>149250.780024</td>\n",
-       "      <td>131335.258888</td>\n",
        "      <td>146376.0</td>\n",
-       "      <td>140248.218906</td>\n",
-       "      <td>122144.235571</td>\n",
+       "      <td>131335.258888</td>\n",
+       "      <td>149250.780024</td>\n",
+       "      <td>140599.402603</td>\n",
+       "      <td>121799.380356</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1992-02-01</th>\n",
-       "      <td>150289.708735</td>\n",
-       "      <td>131131.825070</td>\n",
        "      <td>147079.0</td>\n",
-       "      <td>140131.486831</td>\n",
-       "      <td>122387.934943</td>\n",
+       "      <td>131131.825070</td>\n",
+       "      <td>150289.708735</td>\n",
+       "      <td>140491.562645</td>\n",
+       "      <td>122222.301265</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1992-03-01</th>\n",
-       "      <td>151261.609788</td>\n",
-       "      <td>164783.266318</td>\n",
        "      <td>159336.0</td>\n",
-       "      <td>173462.242096</td>\n",
-       "      <td>155491.551292</td>\n",
+       "      <td>164783.266318</td>\n",
+       "      <td>151261.609788</td>\n",
+       "      <td>173739.039895</td>\n",
+       "      <td>155522.766208</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1992-04-01</th>\n",
-       "      <td>152300.538499</td>\n",
-       "      <td>164876.320165</td>\n",
        "      <td>163669.0</td>\n",
-       "      <td>173879.580312</td>\n",
-       "      <td>155915.479127</td>\n",
+       "      <td>164876.320165</td>\n",
+       "      <td>152300.538499</td>\n",
+       "      <td>174405.435694</td>\n",
+       "      <td>155210.793484</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1992-05-01</th>\n",
-       "      <td>153305.953381</td>\n",
-       "      <td>179316.575111</td>\n",
        "      <td>170068.0</td>\n",
-       "      <td>189197.962600</td>\n",
-       "      <td>170317.007144</td>\n",
+       "      <td>179316.575111</td>\n",
+       "      <td>153305.953381</td>\n",
+       "      <td>188614.334402</td>\n",
+       "      <td>170259.771207</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -338,43 +338,43 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2016-05-07</th>\n",
-       "      <td>448979.625130</td>\n",
-       "      <td>474009.909550</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>483656.932438</td>\n",
-       "      <td>465022.402630</td>\n",
+       "      <td>474009.909550</td>\n",
+       "      <td>448979.625130</td>\n",
+       "      <td>483199.929555</td>\n",
+       "      <td>464815.717712</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2016-05-08</th>\n",
-       "      <td>449025.071656</td>\n",
-       "      <td>472531.169543</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>482087.981310</td>\n",
-       "      <td>462526.112820</td>\n",
+       "      <td>472531.169543</td>\n",
+       "      <td>449025.071656</td>\n",
+       "      <td>482264.272084</td>\n",
+       "      <td>462913.298661</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2016-05-09</th>\n",
-       "      <td>449070.518182</td>\n",
-       "      <td>477923.719431</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>487242.204826</td>\n",
-       "      <td>468919.223202</td>\n",
+       "      <td>477923.719431</td>\n",
+       "      <td>449070.518182</td>\n",
+       "      <td>487200.490366</td>\n",
+       "      <td>468654.923270</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2016-05-10</th>\n",
-       "      <td>449115.964707</td>\n",
-       "      <td>481324.802194</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>489861.684389</td>\n",
-       "      <td>472157.758247</td>\n",
+       "      <td>481324.802194</td>\n",
+       "      <td>449115.964707</td>\n",
+       "      <td>490933.080493</td>\n",
+       "      <td>471820.220954</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2016-05-11</th>\n",
-       "      <td>449161.411233</td>\n",
-       "      <td>482315.157151</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>492214.646430</td>\n",
-       "      <td>473424.316859</td>\n",
+       "      <td>482315.157151</td>\n",
+       "      <td>449161.411233</td>\n",
+       "      <td>491301.210984</td>\n",
+       "      <td>472708.536936</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -382,39 +382,39 @@
        "</div>"
       ],
       "text/plain": [
-       "                    trend    predicted_y         y  predicted_y_upper  \\\n",
+       "                   y    predicted_y          trend  predicted_y_upper  \\\n",
        "ds                                                                      \n",
-       "1992-01-01  149250.780024  131335.258888  146376.0      140248.218906   \n",
-       "1992-02-01  150289.708735  131131.825070  147079.0      140131.486831   \n",
-       "1992-03-01  151261.609788  164783.266318  159336.0      173462.242096   \n",
-       "1992-04-01  152300.538499  164876.320165  163669.0      173879.580312   \n",
-       "1992-05-01  153305.953381  179316.575111  170068.0      189197.962600   \n",
-       "...                   ...            ...       ...                ...   \n",
-       "2016-05-07  448979.625130  474009.909550       NaN      483656.932438   \n",
-       "2016-05-08  449025.071656  472531.169543       NaN      482087.981310   \n",
-       "2016-05-09  449070.518182  477923.719431       NaN      487242.204826   \n",
-       "2016-05-10  449115.964707  481324.802194       NaN      489861.684389   \n",
-       "2016-05-11  449161.411233  482315.157151       NaN      492214.646430   \n",
+       "1992-01-01  146376.0  131335.258888  149250.780024      140599.402603   \n",
+       "1992-02-01  147079.0  131131.825070  150289.708735      140491.562645   \n",
+       "1992-03-01  159336.0  164783.266318  151261.609788      173739.039895   \n",
+       "1992-04-01  163669.0  164876.320165  152300.538499      174405.435694   \n",
+       "1992-05-01  170068.0  179316.575111  153305.953381      188614.334402   \n",
+       "...              ...            ...            ...                ...   \n",
+       "2016-05-07       NaN  474009.909550  448979.625130      483199.929555   \n",
+       "2016-05-08       NaN  472531.169543  449025.071656      482264.272084   \n",
+       "2016-05-09       NaN  477923.719431  449070.518182      487200.490366   \n",
+       "2016-05-10       NaN  481324.802194  449115.964707      490933.080493   \n",
+       "2016-05-11       NaN  482315.157151  449161.411233      491301.210984   \n",
        "\n",
        "            predicted_y_lower  \n",
        "ds                             \n",
-       "1992-01-01      122144.235571  \n",
-       "1992-02-01      122387.934943  \n",
-       "1992-03-01      155491.551292  \n",
-       "1992-04-01      155915.479127  \n",
-       "1992-05-01      170317.007144  \n",
+       "1992-01-01      121799.380356  \n",
+       "1992-02-01      122222.301265  \n",
+       "1992-03-01      155522.766208  \n",
+       "1992-04-01      155210.793484  \n",
+       "1992-05-01      170259.771207  \n",
        "...                       ...  \n",
-       "2016-05-07      465022.402630  \n",
-       "2016-05-08      462526.112820  \n",
-       "2016-05-09      468919.223202  \n",
-       "2016-05-10      472157.758247  \n",
-       "2016-05-11      473424.316859  \n",
+       "2016-05-07      464815.717712  \n",
+       "2016-05-08      462913.298661  \n",
+       "2016-05-09      468654.923270  \n",
+       "2016-05-10      471820.220954  \n",
+       "2016-05-11      472708.536936  \n",
        "\n",
        "[303 rows x 5 columns]"
       ]
      },
      "metadata": {},
-     "execution_count": 14
+     "execution_count": 15
     }
    ],
    "metadata": {}
