start hierarchical example

--- a/examples/simple_example.ipynb
+++ b/examples/simple_example.ipynb
@@ -32,7 +32,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Quick Start Examples"
+    "# Quick Start Examples - Non-Hierarchical Retail Data"
    ],
    "metadata": {}
   },
@@ -71,13 +71,6 @@
       "Importing plotly failed. Interactive plots will not work.\n"
      ]
     }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "## Non-Hierarchical Retail Sales"
    ],
    "metadata": {}
   },
