debugging issues with merge

--- a/examples/hierarchical_example.ipynb
+++ b/examples/hierarchical_example.ipynb
@@ -42,7 +42,7 @@
    "source": [
     "%load_ext autoreload\n",
     "\n",
-    "%autoreload 2"
+    "%autoreload 2\n"
    ],
    "outputs": [],
    "metadata": {}
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "source": [
     "fframe.predict(model=\"prophet\", future_periods=10, weekly_seasonality=True, daily_seasonality=True)\n",
     "predictions = fframe.get_predictions(append_hierarchy_col=True)"
@@ -144,54 +144,44 @@
    "outputs": [
     {
      "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "Importing plotly failed. Interactive plots will not work.\n"
+     ]
+    },
+    {
+     "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Initial log joint probability = -7.51467\n",
+      "Initial log joint probability = -12.136\n",
       "    Iter      log prob        ||dx||      ||grad||       alpha      alpha0  # evals  Notes \n",
-      "      99       10013.1    0.00402474       2445.52      0.1921      0.1921      122   \n",
+      "      99       10026.9    0.00971736       3330.57           1           1      121   \n",
       "    Iter      log prob        ||dx||      ||grad||       alpha      alpha0  # evals  Notes \n",
-      "     199       10083.7    0.00518523       3103.87           1           1      235   \n",
+      "     199       10096.7    0.00563647       1064.04           1           1      235   \n",
       "    Iter      log prob        ||dx||      ||grad||       alpha      alpha0  # evals  Notes \n",
-      "     299       10104.1   0.000387459       296.271      0.4669      0.4669      341   \n",
+      "     299       10117.8    0.00187908       191.638           1           1      345   \n",
       "    Iter      log prob        ||dx||      ||grad||       alpha      alpha0  # evals  Notes \n",
-      "     399       10114.7   0.000702096       1314.98      0.6717      0.6717      456   \n",
+      "     399       10125.4     0.0302934       2074.18           1           1      458   \n",
       "    Iter      log prob        ||dx||      ||grad||       alpha      alpha0  # evals  Notes \n",
-      "     499       10118.8     0.0003014       322.933      0.5572      0.5572      568   \n",
+      "     499       10134.5    0.00112405       314.368           1           1      584   \n",
       "    Iter      log prob        ||dx||      ||grad||       alpha      alpha0  # evals  Notes \n",
-      "     599       10122.2   0.000512272       445.355      0.6129      0.6129      696   \n",
+      "     599       10135.7   0.000633846       169.708           1           1      708   \n",
       "    Iter      log prob        ||dx||      ||grad||       alpha      alpha0  # evals  Notes \n",
-      "     699       10123.4    0.00012173       96.3249      0.7121      0.7121      813   \n",
+      "     699       10137.4    0.00150245       110.685           1           1      829   \n",
       "    Iter      log prob        ||dx||      ||grad||       alpha      alpha0  # evals  Notes \n",
-      "     779       10124.7   6.87817e-05       153.903   5.123e-07       0.001      967  LS failed, Hessian reset \n",
-      "     799       10125.5   0.000231897       110.206           1           1      992   \n",
+      "     799       10139.9    0.00043847       162.925           1           1      964   \n",
       "    Iter      log prob        ||dx||      ||grad||       alpha      alpha0  # evals  Notes \n",
-      "     899       10126.3   3.07765e-05       90.9112      0.4444      0.4444     1111   \n",
+      "     819       10140.1   0.000117844       105.498   5.999e-07       0.001     1031  LS failed, Hessian reset \n",
+      "     884       10140.6   5.86997e-05       160.679   5.612e-07       0.001     1159  LS failed, Hessian reset \n",
+      "     899       10140.8   0.000312069       148.328           1           1     1177   \n",
       "    Iter      log prob        ||dx||      ||grad||       alpha      alpha0  # evals  Notes \n",
-      "     991       10127.5   1.26421e-05       131.829   6.667e-08       0.001     1267  LS failed, Hessian reset \n",
-      "     999       10127.9   0.000530821       236.175       0.938       0.938     1276   \n",
+      "     999       10140.9   4.96207e-06       58.5586     0.07173           1     1311   \n",
       "    Iter      log prob        ||dx||      ||grad||       alpha      alpha0  # evals  Notes \n",
-      "    1099       10128.4   0.000129068       118.906      0.2197           1     1402   \n",
+      "    1056       10140.9   2.95485e-05       253.008    1.63e-07       0.001     1431  LS failed, Hessian reset \n",
+      "    1090         10141   9.60761e-06       100.631   1.239e-07       0.001     1519  LS failed, Hessian reset \n",
+      "    1099         10141   9.86421e-07        66.059           1           1     1532   \n",
       "    Iter      log prob        ||dx||      ||grad||       alpha      alpha0  # evals  Notes \n",
-      "    1112       10128.5   3.77809e-05       268.551   2.354e-07       0.001     1465  LS failed, Hessian reset \n",
-      "    1199       10129.6    0.00359949        110.65      0.9579      0.9579     1569   \n",
-      "    Iter      log prob        ||dx||      ||grad||       alpha      alpha0  # evals  Notes \n",
-      "    1210       10129.8   1.17947e-05       116.714   6.016e-08       0.001     1643  LS failed, Hessian reset \n",
-      "    1299       10131.4   0.000278995       111.884       0.467       0.467     1752   \n",
-      "    Iter      log prob        ||dx||      ||grad||       alpha      alpha0  # evals  Notes \n",
-      "    1322       10131.7   1.17872e-05       127.251   7.583e-08       0.001     1873  LS failed, Hessian reset \n",
-      "    1399       10132.3   0.000188714       120.677      0.9191      0.9191     1962   \n",
-      "    Iter      log prob        ||dx||      ||grad||       alpha      alpha0  # evals  Notes \n",
-      "    1499       10132.5   2.85879e-05       60.1995           1           1     2088   \n",
-      "    Iter      log prob        ||dx||      ||grad||       alpha      alpha0  # evals  Notes \n",
-      "    1570       10132.7   7.59505e-05       100.282    4.89e-07       0.001     2222  LS failed, Hessian reset \n",
-      "    1599       10132.9   0.000262813       61.7632           1           1     2255   \n",
-      "    Iter      log prob        ||dx||      ||grad||       alpha      alpha0  # evals  Notes \n",
-      "    1644       10132.9   3.95259e-05        116.13   5.686e-07       0.001     2359  LS failed, Hessian reset \n",
-      "    1667       10132.9   1.09656e-05       115.098   1.365e-07       0.001     2430  LS failed, Hessian reset \n",
-      "    1696       10132.9   7.52379e-06       81.0339   6.961e-08       0.001     2501  LS failed, Hessian reset \n",
-      "    1699       10132.9   1.69528e-05       60.2046           1           1     2504   \n",
-      "    Iter      log prob        ||dx||      ||grad||       alpha      alpha0  # evals  Notes \n",
-      "    1711       10132.9   1.68229e-07       61.9475     0.05475           1     2523   \n",
+      "    1103         10141   7.19283e-07       67.6018           1           1     1537   \n",
       "Optimization terminated normally: \n",
       "  Convergence detected: relative gradient magnitude is below tolerance\n"
      ]
