fix loading function

--- a/examples/hierarchical_example.ipynb
+++ b/examples/hierarchical_example.ipynb
@@ -61,22 +61,6 @@
     "style.use('fivethirtyeight')\n",
     "\n",
     "\n",
-    "def assign_fake_hierarchy(data, hierarchy_tuple, hierarchy_cols, target='sales'):\n",
-    "    data = data.copy(deep=True)\n",
-    "    data['hierarchy'] = [hierarchy_tuple]*len(data)\n",
-    "    data[hierarchy_cols] = pd.DataFrame(data['hierarchy'].tolist(), index=data.index)\n",
-    "    data.drop('hierarchy', axis=1, inplace=True)\n",
-    "\n",
-    "    data.rename({\"y\":\"sales\", \"ds\":\"datetime\"}, axis=1, inplace=True)\n",
-    "    data[target] = data[target] + np.random.normal(0, data[target].std()*.2, len(data))\n",
-    "    data.loc[data[target] < 0, target] = 0\n",
-    "    data[target] = data[target].astype(int)\n",
-    "\n",
-    "    # change column order\n",
-    "    data = data[['datetime'] + hierarchy_cols + [target]]\n",
-    "\n",
-    "    return data\n",
-    "\n",
     "# help ipython find our path\n",
     "directory = os.path.dirname(os.path.abspath(''))\n",
     "os.chdir(directory)\n",
@@ -115,12 +99,25 @@
     "df = pd.concat([assign_fake_hierarchy(data, hierarchy_tuple, hierarchy_cols=hierarchy_cols) for hierarchy_tuple in fake_hierarchy])\n",
     "#df.to_csv('./forecastframe/sample_data/daily/mock_hierarchical_retail_sales.csv', index=False)"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'assign_fake_hierarchy' is not defined",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_25667/3499291736.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0mfake_hierarchy\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtuple\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstate\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34mf\"{state}_{store_id}\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcat\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34mf\"{cat}_{sku}\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mcat\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mcategories\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0msku\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mskus_per_dept\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mstate\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mstates\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mstore_id\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstores_per_state\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m \u001b[0mdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconcat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0massign_fake_hierarchy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhierarchy_tuple\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhierarchy_cols\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mhierarchy_cols\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mhierarchy_tuple\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mfake_hierarchy\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m \u001b[0;31m#df.to_csv('./forecastframe/sample_data/daily/mock_hierarchical_retail_sales.csv', index=False)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/tmp/ipykernel_25667/3499291736.py\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0mfake_hierarchy\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtuple\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstate\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34mf\"{state}_{store_id}\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcat\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34mf\"{cat}_{sku}\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mcat\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mcategories\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0msku\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mskus_per_dept\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mstate\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mstates\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mstore_id\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstores_per_state\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m \u001b[0mdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconcat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0massign_fake_hierarchy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhierarchy_tuple\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhierarchy_cols\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mhierarchy_cols\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mhierarchy_tuple\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mfake_hierarchy\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m \u001b[0;31m#df.to_csv('./forecastframe/sample_data/daily/mock_hierarchical_retail_sales.csv', index=False)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'assign_fake_hierarchy' is not defined"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "source": [
     "fframe = ff.ForecastFrame(data=df, target=\"sales\", datetime_column=\"datetime\", hierarchy=hierarchy_cols)"
    ],
@@ -136,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "source": [
     "fframe.predict(model=\"prophet\", future_periods=10, weekly_seasonality=True, daily_seasonality=True)\n",
     "predictions = fframe.get_predictions(append_hierarchy_col=True)"
@@ -191,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "source": [
     "fframe.cross_validate(folds=3, model=\"prophet\")"
    ],
@@ -437,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "source": [
     "# check that the latest round of predictions stored in the object were created using the params found in cross-validation\n",
     "assert fframe.model_object.seasonality_mode == fframe.cross_validations[-1][\"best_params\"][\"seasonality_mode\"]"
@@ -447,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "source": [
     "fframe.get_cross_validation_errors()"
    ],
@@ -580,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "source": [
     "fframe.save_fframe(name='prophet.pkl')"
    ],
@@ -604,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "source": [
     "# Predictions are weak because our model doesn't have any features to grip on\n",
     "# Note we can pass in lightgbm params as kwargs, such as learning_rate\n",
@@ -639,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "source": [
     "# Let's add some features to help our model out\n",
     "#fframe.calc_datetime_features()\n",
@@ -1055,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "source": [
     "fframe.predict(model=\"lightgbm\", future_periods=10, learning_rate=.04)\n",
     "fframe.get_predictions().plot.line()"
@@ -1095,7 +1092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "source": [
     "fframe.get_errors()"
    ],
@@ -1228,7 +1225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "source": [
     "fframe.cross_validate(folds=3, model=\"lightgbm\")"
    ],
